CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
#CMAKE_POLICY(VERSION 2.8)
#IF(COMMAND cmake_policy)
#  CMAKE_POLICY(SET CMP0003 NEW)
#  CMAKE_POLICY(SET CMP0020 NEW)
#  CMAKE_POLICY(SET CMP0010 NEW)
#  #CMAKE_POLICY(SET CMP0048 NEW) # only with CMake 3
#ENDIF(COMMAND cmake_policy)

# set project name. The exe name is taken from this
PROJECT( ITKBenchmarking_Depends )

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED YES) 
SET(BUILD_SHARED_LIBS OFF CACHE BOOL "Build static libraries by default")

IF(MSVC)
  
  SET( CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Compilation Options" FORCE )
  #ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_DEPRECATE -D_SCL_SECURE_NO_WARNINGS)
  
ELSE()

  SET( CMAKE_CONFIGURATION_TYPES "Release" CACHE STRING "Compilation Options" FORCE )  
  #SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-function" CACHE STRING "Compilation Flags" FORCE )
  
ENDIF()

INCLUDE( cmake_modules/Superbuild.cmake )
  
FILE(GLOB DEPLOY_FILES_AND_DIRS "${CMAKE_BINARY_DIR}/install/*")
FOREACH(ITEM ${DEPLOY_FILES_AND_DIRS})
   IF( IS_DIRECTORY "${ITEM}" )
      LIST( APPEND DIRS_TO_DEPLOY "${ITEM}" )
   ELSE()
      LIST( APPEND FILES_TO_DEPLOY "${ITEM}" )
   ENDIF()
ENDFOREACH()
INSTALL( FILES ${FILES_TO_DEPLOY} DESTINATION ${CMAKE_INSTALL_PREFIX} )
INSTALL( DIRECTORY ${DIRS_TO_DEPLOY} DESTINATION ${CMAKE_INSTALL_PREFIX} )